[tool.black]
line-length = 72
py37 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
| dist
)/
'''

[tool.poetry]
name = "albert"
version = "0.1.0"
description = ""
authors = ["Andrés <andres.sandoval@alumnos.usm.cl>"]

[tool.poetry.dependencies]
python = "^3.6"
structlog = "^20.1.0"
pydantic = "^1.6"
gensim = "^3.8.3"
nltk = "^3.5"
elastinga = {path = "elastinga-0.1.0-py3-none-any.whl"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.3"
black = "^19.10b0"
ipython = "^7.16.1"
colorama = "^0.4.3"
autopep8 = "^1.5.3"
docformatter = "^1.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
